ccache news
===========


Unreleased 3.2.4
----------------

Bug fixes
~~~~~~~~~

- Fixed build error related to zlib on systems with older make versions
  (regression in ccache 3.2.3).

- Made conversion-to-bool explicit to avoid build warnings (and potential
  runtime errors) on legacy systems.


ccache 3.2.3
------------
Release date: 2015-08-16


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for compiler option `-gsplit-dwarf`.


Bug fixes
~~~~~~~~~

- Support external zlib in nonstandard directory.

- Avoid calling `exit()` inside an exit handler.

- Let exit handler terminate properly.

- Bail out on compiler option `--save-temps` in addition to `-save-temps`.

- Only log "Disabling direct mode" once when failing to read potential include
  files.


ccache 3.2.2
------------
Release date: 2015-05-10


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for `CCACHE_COMPILERCHECK=string:<value>`. This is a faster
  alternative to `CCACHE_COMPILERCHECK=<command>` if the command's output can
  be precalculated by the build system.

- Add support for caching code coverage results (compiling for gcov).


Bug fixes
~~~~~~~~~

- Made hash of cached result created with and without `CCACHE_CPP2` different.
  This makes it possible to rebuild with `CCACHE_CPP2` set without having to
  clear the cache to get new results.

- Don't try to reset a non-existing stats file. This avoids ``No such file or
  directory'' messages in the ccache log when the cache directory doesn't
  exist.

- Fixed a bug where ccache deleted clang diagnostics after compiler failures.

- Avoid performing an unnecessary copy of the object file on a cache miss.

- Bail out on too hard compiler option `-fmodules`.

- Bail out on too hard compiler option `-fplugin=libcc1plugin` (interaction
  with GDB).

- Fixed build error when compiling ccache with recent clang versions.

- Removed signal-unsafe code from signal handler.
