@@ -14,6 +14,10 @@ Bug fixes
 - Made conversion-to-bool explicit to avoid build warnings (and potential
   runtime errors) on legacy systems.
 
+- Wait for compiler subprocess (if any) to exit before exiting from a signal.
+  This should fix a race condition (albeit a quite unlikely one) related to
+  removal of the compiler output file(s).
+
 
 ccache 3.2.3
 ------------
